--- a/orc_site/templates/view_all.html
+++ b/orc_site/templates/view_all.html
@@ -1,10 +1,10 @@
 {% extends "page.html" %}
 
 {% if is_production %}
-    {% block etracker_et_pagename %}%2FAbout%3Aabout%2F{% endblock etracker_et_pagename %}
-    {% block etracker_et_pagename_nojs %}%2FAbout%3Aabout%2F{% endblock etracker_et_pagename_nojs %}
-    {% block etracker_et_areas %}%2Fabout{% endblock etracker_et_areas %}
-    {% block etracker_et_areas_no_js %}%2Fabout{% endblock etracker_et_areas_no_js %}
+    {% block etracker_et_pagename %}%2FGallery%3Agallery%2F{% endblock etracker_et_pagename %}
+    {% block etracker_et_pagename_nojs %}%2FGallery%3Agallery%2F{% endblock etracker_et_pagename_nojs %}
+    {% block etracker_et_areas %}%2Fgallery{% endblock etracker_et_areas %}
+    {% block etracker_et_areas_no_js %}%2Fgallery{% endblock etracker_et_areas_no_js %}
 {% endif %}
 
 
