--- a/orc_site/templates/gallery/popular_repos.html
+++ b/orc_site/templates/gallery/popular_repos.html
@@ -9,7 +9,7 @@
 
 
 {% block main %}
-
+<h1>{{ title }}</h1>
 <div class="table-responsive">
     <table class="table table-hover" >
             <thead>
