--- a/binderhub/templates/index.html
+++ b/binderhub/templates/index.html
@@ -84,7 +84,7 @@
 
         <!--url section-->
         <div class="url row">
-            <div class="bluedropdown">
+            <div class="dropdownmenu">
               <label>Copy the URL below and share your Binder with others:</label>
             </div>
             <div class="url-row">
@@ -94,8 +94,8 @@
         </div>
 
         <div class="badges row">
-            <div class="bluedropdown" id="toggle-badge-snippet">
-              <label>Copy the text below, then paste into your README to show a binder badge: <img id="badge" src="{{static_url("images/badge.svg")}}"></label>
+            <div class="dropdownmenu" id="toggle-badge-snippet">
+              <label>Copy the text below, then paste into your README to show a binder badge: <img id="badge" src="{{static_url("images/badge_logo.svg")}}"></label>
               <a id="badge-link"></a>
               <a href="#" title="show badge snippets"><span id="badge-snippet-caret" class="glyphicon glyphicon-triangle-right"></span></a>
             </div>
