two versions of Gallery ,

--- a/orc_site/templates/gallery/popular_repos.html
+++ b/orc_site/templates/gallery/popular_repos.html
@@ -29,7 +29,7 @@
                     <td>{{ repo_data[2] }}</td>
                     <td>{{ repo_data[3] }}</td>
                     <td><a href="{{ repo_data[5] }}" target="_blank">
-                        <img src="https://notebooks.gesis.org/binder/badge.svg">
+                        <img src="https://notebooks.gesis.org/binder/badge_logo.svg">
                     </a></td>
                 </tr>
             {% endfor %}
