--- a/orc_site/templates/gallery/gallery.html
+++ b/orc_site/templates/gallery/gallery.html
@@ -37,8 +37,7 @@
                     <tbody>
                     {% for repo_data in popular_repos[:5] %}
                         <tr>
-                            <td><a href="{{ repo_data[4] }}" target="_blank"
-                                   style="color: #58748f; font-family: Arial,Helvetica,sans-serif; font-size: 1em;">{{ repo_data[0] }} </a>
+                            <td><a href="{{ repo_data[4] }}" target="_blank">{{ repo_data[0] }} </a>
                             </td>
                             <td>{{ repo_data[1] }}</td>
                             <td>{{ repo_data[2] }}</td>
