--- a/orc_site/templates/gallery/popular_repos.html
+++ b/orc_site/templates/gallery/popular_repos.html
@@ -7,11 +7,14 @@
     {% block etracker_et_areas_no_js %}%2Fgallery{% endblock etracker_et_areas_no_js %}
 {% endif %}
 
+{% block extra_css %}
+<link rel="stylesheet" href="/static/vendor/DataTables/DataTables-1.10.18/css/dataTables.bootstrap.min.css">
+{% endblock extra_css %}
 
 {% block main %}
 <h1>{{ title }}</h1>
 <div class="table-responsive">
-    <table class="table table-hover" >
+    <table id="data-table" class="table table-hover" >
             <thead>
             <tr>
                 <th scope="col">Repo</th>
@@ -37,4 +40,17 @@
             </tbody>
         </table>
 </div>
+
+{% block extra_js %}
+{#<script src="/static/vendor/jquery-3.2.1.min.js"></script>#}
+{#https://datatables.net/#}
+<script src="/static/vendor/DataTables/DataTables-1.10.18/js/jquery.dataTables.min.js"></script>
+<script src="/static/vendor/DataTables/DataTables-1.10.18/js/dataTables.bootstrap.min.js"></script>
+
+<script>
+    $(document).ready(function () {
+        $('#data-table').DataTable();
+    });
+</script>
+{% endblock extra_js %}
 {% endblock main %}
