--- a/orc_site/templates/gallery/popular_repos.html
+++ b/orc_site/templates/gallery/popular_repos.html
@@ -14,7 +14,7 @@
 {% block main %}
 <h1>{{ title }}</h1>
 <div class="table-responsive">
-    <table id="data-table" class="table table-hover" >
+    <table id="repos-table" class="table table-hover" >
             <thead>
             <tr>
                 <th scope="col">Repo</th>
@@ -42,14 +42,21 @@
 </div>
 
 {% block extra_js %}
-{#<script src="/static/vendor/jquery-3.2.1.min.js"></script>#}
+<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 {#https://datatables.net/#}
-<script src="/static/vendor/DataTables/DataTables-1.10.18/js/jquery.dataTables.min.js"></script>
-<script src="/static/vendor/DataTables/DataTables-1.10.18/js/dataTables.bootstrap.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap.min.js"></script>
 
 <script>
     $(document).ready(function () {
-        $('#data-table').DataTable();
+        if ($.fn.dataTable.isDataTable('#repos-table')) {
+            table = $('#repos-table').DataTable();
+        }
+        else {
+            table = $('#repos-table').DataTable({
+                "order": [[3, "desc"]]
+            });
+        }
     });
 </script>
 {% endblock extra_js %}
