add gallery into menus

--- a/binderhub/templates/page.html
+++ b/binderhub/templates/page.html
@@ -173,6 +173,7 @@
 {#                    <li><a href="https://notebooks{% if is_staging %}-test{% endif %}.gesis.org/Shibboleth.sso/Login?SAMLDS=1&target=https://notebooks{% if is_staging %}-test{% endif %}.gesis.org/jupyter/hub/login&entityID=https%3A%2F%2Fidp.gesis.org%2Fidp%2Fshibboleth">Your Server</a></li>#}
                     <li><a href="/jupyter/">Your Server</a></li>
                     <li><a href="/binder/" id="navbar-active-a" class="gs_active_sub">Binder</a></li>
+                    <li><a href="/gallery/">Gallery</a></li>
                   </ul>
                 </div>
               </div>
