--- a/jupyterhub/docker/k8s_hub/templates/page.html
+++ b/jupyterhub/docker/k8s_hub/templates/page.html
@@ -223,6 +223,7 @@
                   </ul>
                 </li>
                 <li><a href="/binder/">Binder</a></li>
+                <li><a href="/gallery/">Gallery</a></li>
               </ul>
             </div>
           </div>
